--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -4,17 +4,77 @@
 
 {% block conteudo %}
 <!--content-->
+<style>
+
+.centralizado{
+	text-align: center;
+	font-size: 20px;
+	font-family: Ubuntu;
+	font-weight: bold;
+	color: black
+}
+
+.centralizado2{
+	text-align: center;
+	font-family:Ubuntu;
+	font-weight: 900;
+	color: black
+}
+
+.borda {
+	border-radius: 25px;
+	border-color: orange;
+	border-style:solid;
+	border-width:medium;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	text-align: center;
+	color: darkorange;
+}
+
+.borda:focus{
+	padding-left: 30px;
+	padding-right: 30px;
+	transition: 0.5s
+}
+
+.botiones{
+	border: none;
+	border-radius: 15px;
+	background-color: rgba(220, 150, 75, 1);
+	padding: 10px;
+	margin-top: 15px;
+	color: white;
+}
+
+.botiones:hover{
+	background-color: orange;
+	padding-top: 11px;
+	padding-bottom: 11px;
+	padding-left: 12px;
+	padding-right: 12px;
+	font-size: 25px;
+	font-weight: bolder;
+	transition: 0.5s
+}
+
+.afastarTopo{	margin-top: 50px }
+.afastarTopo2{ margin-top: 20px }
+.afastarBaixo{ margin-bottom: 50px }
+
+</style>
+
 <div class=" container">
-		<h1>Cadastre-se</h1>
-		<form method="post">
-			{% csrf_token %}
-			<p>Usuário:</p>
-			<p>{{form.username}}</p>
-			<p>Senha:</p>
-			<p>{{form.password1}}</p>
-			<p>Repita a senha:</p>
-			<p>{{form.password2}}</p>
-			<button type="submit"> Cadastrar </button>
-		</form>
+	<h1 class="centralizado2 afastarTopo">Cadastre-se</h1>
+	<form method="post">
+		{% csrf_token %}
+		<p class="centralizado afastarTopo2">Usuário:</p>
+		<p class="centralizado">{{form.username | add_class:"borda"}}</p>
+		<p class="centralizado afastarTopo2">Senha:</p>
+		<p class="centralizado">{{form.password1 | add_class:"borda"}}</p>
+		<p class="centralizado afastarTopo2">Repita a senha:</p>
+		<p class="centralizado">{{form.password2 | add_class:"borda"}}</p>
+		<p class="centralizado afastarTopo2 afastarBaixo"><button type="submit" class="botiones"> Cadastrar </button></p>
+	</form>
 </div>
 {% endblock conteudo %}
