--- a/core/templates/perfil.html
+++ b/core/templates/perfil.html
@@ -51,8 +51,8 @@
 
 <div class="container">
 	<p class="centro baixar"> <a href="{% url 'meus_dados' user.id %}" class="produtos"> Meus dados </a> </p>
-	<p class="centro"> <a href="{% url 'generos' %}" class="produtos"> Gêneros </a> </p>
-	<p class="centro"> <a href="{% url 'produtos' %}" class="produtos"> Livros </a> </p>
+	<p class="centro"> <a href="{% url 'generos' %}" class="produtos"> Cadastrar Gêneros </a> </p>
+	<p class="centro"> <a href="{% url 'livro_cadastrar' %}" class="produtos"> Cadastrar Livros </a> </p>
 	<p class="centro afastar"> <a href="{% url 'logout' %}" class="produtos"> Logout </a> </p>
 
 </div>
