--- a/core/templates/products.html
+++ b/core/templates/products.html
@@ -116,47 +116,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 				<!---->
 				<div class="product-bottom">
-					<div class="of-left-in">
-								<h3 class="best">Best Sellers</h3>
-							</div>
 					<div class="product-go">
-						<div class=" fashion-grid">
-									<a href="single.html"><img class="img-responsive " src="{% static 'images/p1.jpg' %}" alt=""></a>
-									
-								</div>
-							<div class=" fashion-grid1">
-								<h6 class="best2"><a href="single.html" >Lorem ipsum dolor sit
-amet consectetuer  </a></h6>
-								
-								<span class=" price-in1"> $40.00</span>
-							</div>
 								
 							<div class="clearfix"> </div>
 							</div>
 							<div class="product-go">
-						<div class=" fashion-grid">
-									<a href="single.html"><img class="img-responsive " src="{% static 'images/p2.jpg' %}" alt=""></a>
-									
-								</div>
-							<div class="fashion-grid1">
-								<h6 class="best2"><a href="single.html" >Lorem ipsum dolor sit
-amet consectetuer </a></h6>
-								
-								<span class=" price-in1"> $40.00</span>
-							</div>
 								
 							<div class="clearfix"> </div>
 							</div>
 					
 				</div>
-<div class=" per1">
-				<a href="single.html" ><img class="img-responsive" src="{% static 'images/pro.jpg' %}" alt="">
-				<div class="six1">
-					<h4>DISCOUNT</h4>
-					<p>Up to</p>
-					<span>60%</span>
-				</div></a>
-			</div>
+
 				</div>
 				
 				<!--  listagem de livros --->
@@ -166,14 +136,14 @@ amet consectetuer </a></h6>
 				<div class=" bottom-product">
 					<div class="col-md-4 bottom-cd simpleCart_shelfItem">
 						<div class="product-at ">
-							<a href="{% url 'livro_detalhes' %}">{{ livro.capa | add_class:"img-responsive" }}
+							<a href="{% url 'livro_detalhes' %}"> <img src="/media/{{ livro.capa }}" alt="Imagem" width="250px" height="200px">
 							<div class="pro-grid">
-										<span class="buy-in">Buy Now</span>
+										<span class="buy-in">Compre agora</span>
 							</div>
 						</a>	
 						</div>
 						<p class="tun">It is a long established fact that a reader</p>
-						<a href="#" class="item_add"><p class="number item_price"><i> </i>$500.00</p></a>						
+						<a href="{% url 'livro_detalhes' %}" class="item_add"><p class="number item_price"><i> </i>Compre agora</p></a>						
 					</div>
 					{% empty %}
 					<h2 class="produtos"> Nenhum livro cadastrado </h2>
@@ -196,6 +166,8 @@ amet consectetuer </a></h6>
 		</div>
 		
 		</div>
+	</div>
+
 
 			
 				<!---->
