adcionei o checkbox múltiplo à gênero no forms

--- a/core/templates/livros_cadastrar.html
+++ b/core/templates/livros_cadastrar.html
@@ -15,7 +15,7 @@
 				<div>
 					<p> Título: {{ form.titulo | add_class:"form-control" }} </p>
 					<p> Autor: {{ form.autor | add_class:"form-control" }} </p>
-					<p> Gênero: {{ form.generoFK | add_class:"form-control" }} </p>
+					<p> Gênero: {{ form.generoFK }} </p>
 					<p> Isbn: {{ form.isbn | add_class:"form-control" }} </p>
 					<p> Capa: {{ form.capa | add_class:"form-control" }} </p>
 					<p> Preço: {{ form.preco | add_class:"form-control" }} </p>
