--- a/core/templates/products.html
+++ b/core/templates/products.html
@@ -1,4 +1,4 @@
-<!--A Design by W3layouts 
+<!--A Design by W3layouts
 Author: W3layout
 Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
@@ -9,169 +9,67 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 {% load static %}
 {% load widget_tweaks %}
 
-
-
 {% block conteudo %}
 
-		<div class="product">
-			<div class="container">
-				<div class="col-md-3 product-price">
-					  
-				<div class=" rsidebar span_1_of_left">
-					<div class="of-left">
-						<h3 class="cate">Categories</h3>
-					</div>
-		 <ul class="menu">
-		<li class="item1"><a href="#">Men </a>
-			<ul class="cute">
-				<li class="subitem1"><a href="single.html">Cute Kittens </a></li>
-				<li class="subitem2"><a href="single.html">Strange Stuff </a></li>
-				<li class="subitem3"><a href="single.html">Automatic Fails </a></li>
-			</ul>
-		</li>
-		<li class="item2"><a href="#">Women </a>
-			<ul class="cute">
-				<li class="subitem1"><a href="single.html">Cute Kittens </a></li>
-				<li class="subitem2"><a href="single.html">Strange Stuff </a></li>
-				<li class="subitem3"><a href="single.html">Automatic Fails </a></li>
-			</ul>
-		</li>
-		<li class="item3"><a href="#">Kids</a>
-			<ul class="cute">
-				<li class="subitem1"><a href="single.html">Cute Kittens </a></li>
-				<li class="subitem2"><a href="single.html">Strange Stuff </a></li>
-				<li class="subitem3"><a href="single.html">Automatic Fails</a></li>
-			</ul>
-		</li>
-		<li class="item4"><a href="#">Accesories</a>
-			<ul class="cute">
-				<li class="subitem1"><a href="single.html">Cute Kittens </a></li>
-				<li class="subitem2"><a href="single.html">Strange Stuff </a></li>
-				<li class="subitem3"><a href="single.html">Automatic Fails</a></li>
-			</ul>
-		</li>
-				
-		<li class="item4"><a href="#">Shoes</a>
-			<ul class="cute">
-				<li class="subitem1"><a href="product.html">Cute Kittens </a></li>
-				<li class="subitem2"><a href="product.html">Strange Stuff </a></li>
-				<li class="subitem3"><a href="product.html">Automatic Fails </a></li>
-			</ul>
-		</li>
-	</ul>
-					</div>
-				<!--initiate accordion-->
-		<script type="text/javascript">
-			$(function() {
-			    var menu_ul = $('.menu > li > ul'),
-			           menu_a  = $('.menu > li > a');
-			    menu_ul.hide();
-			    menu_a.click(function(e) {
-			        e.preventDefault();
-			        if(!$(this).hasClass('active')) {
-			            menu_a.removeClass('active');
-			            menu_ul.filter(':visible').slideUp('normal');
-			            $(this).addClass('active').next().stop(true,true).slideDown('normal');
-			        } else {
-			            $(this).removeClass('active');
-			            $(this).next().stop(true,true).slideUp('normal');
-			        }
-			    });
-			
-			});
-		</script>
+<style>
+.centralizado{
+	text-align: center;
+}
+
+.pDeBaixo{
+	text-align: center;
+	font-size: 20px;
+	font-family: Ubuntu;
+	margin-top: 10px;
+	font-size: 20px
+}
+
+.aDeBaixo {
+	color: white;
+	background-color: orange;
+	padding: 5px;
+	padding-left: 20px;
+	padding-right: 20px;
+	border: none;
+	border-radius: 25px;
+}
+.aDeBaixo:hover{
+	color: white;
+	font-size: 23px;
+	font-weight: bolder;
+	text-decoration: none;
+	transition: 0.5s;
+}
+
+.separarRodape{	margin-bottom: 75px; }
+.separarMenu{ margin-top: 50px }
+
+</style>
+
+<div class="container separarMenu separarRodape">
+	<div class="row">
+		{# -------------------------------------------------------------------------------------------- #}
+		{% for livro in lista_livros %}
+		<div class="col-md-3">
+			<p class="centralizado">
+				<a href="{% url 'livro_detalhes' %}">
+					<img src="/media/{{ livro.capa }}" alt="Imagem" width="150px" height="200px">
+				</a>
+			</p>
+			<p class="centralizado pDeBaixo">
+				<a href="{% url 'livro_detalhes' %}" class="aDeBaixo">
+					<span>Compre agora</span>
+				</a>
+			</p>
+		</div>
+		{% empty %}
+		<h2 class=""> Nenhum livro cadastrado </h2>
+
+		{% endfor %}
+
+	</div>
+</div>
+
 <!---->
-	<div class="product-middle">
-		
-					<div class="fit-top">
-						<h6 class="shop-top">Lorem Ipsum</h6>
-						<a href="single.html" class="shop-now">SHOP NOW</a>
-<div class="clearfix"> </div>
-	</div>
-				</div>	 
-						<div class="sellers">
-							<div class="of-left-in">
-								<h3 class="tag">Tags</h3>
-							</div>
-								<div class="tags">
-									<ul>
-										<li><a href="#">design</a></li>
-										<li><a href="#">fashion</a></li>
-										<li><a href="#">lorem</a></li>
-										<li><a href="#">dress</a></li>
-										<li><a href="#">fashion</a></li>
-										<li><a href="#">dress</a></li>
-										<li><a href="#">design</a></li>
-										<li><a href="#">dress</a></li>
-										<li><a href="#">design</a></li>
-										<li><a href="#">fashion</a></li>
-										<li><a href="#">lorem</a></li>
-										<li><a href="#">dress</a></li>
-										
-										<div class="clearfix"> </div>
-									</ul>
-								
-								</div>
-								
-		</div>
-				<!---->
-				<div class="product-bottom">
-					<div class="product-go">
-								
-							<div class="clearfix"> </div>
-							</div>
-							<div class="product-go">
-								
-							<div class="clearfix"> </div>
-							</div>
-					
-				</div>
-
-				</div>
-				
-				<!--  listagem de livros --->
-
-				{% for livro in lista_livros %}
-				<div class="col-md-9 product1">
-				<div class=" bottom-product">
-					<div class="col-md-4 bottom-cd simpleCart_shelfItem">
-						<div class="product-at ">
-							<a href="{% url 'livro_detalhes' %}"> <img src="/media/{{ livro.capa }}" alt="Imagem" width="250px" height="200px">
-							<div class="pro-grid">
-										<span class="buy-in">Compre agora</span>
-							</div>
-						</a>	
-						</div>
-						<p class="tun">It is a long established fact that a reader</p>
-						<a href="{% url 'livro_detalhes' %}" class="item_add"><p class="number item_price"><i> </i>Compre agora</p></a>						
-					</div>
-					{% empty %}
-					<h2 class="produtos"> Nenhum livro cadastrado </h2>
-				
-				</div>
-			{% endfor %}	
-
-		<div class="clearfix"> </div>
-		<nav class="in">
-				  <ul class="pagination">
-					<li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
-					<li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
-					<li><a href="#">2 <span class="sr-only"></span></a></li>
-					<li><a href="#">3 <span class="sr-only"></span></a></li>
-					<li><a href="#">4 <span class="sr-only"></span></a></li>
-					<li><a href="#">5 <span class="sr-only"></span></a></li>
-					 <li> <a href="#" aria-label="Next"><span aria-hidden="true">»</span> </a> </li>
-				  </ul>
-				</nav>
-		</div>
-		
-		</div>
-	</div>
-
-
-			
-				<!---->
 {% endblock conteudo %}
 <!--//content-->
-
-			
