--- a/core/templates/single.html
+++ b/core/templates/single.html
@@ -23,10 +23,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					  
 				<div class=" rsidebar span_1_of_left">
 					<div class="of-left">
-						<h3 class="cate">Categories</h3>
+						<h3 class="cate">Categorias</h3>
 					</div>
 		 <ul class="menu">
-		<li class="item1"><a href="#">Men </a>
 			<ul class="cute">
 				<li class="subitem1"><a href="#">Cute Kittens </a></li>
 				<li class="subitem2"><a href="#">Strange Stuff </a></li>
@@ -195,8 +194,9 @@ $(window).load(function() {
 </script>
 					</div>	
 					<div class="col-md-7 single-top-in simpleCart_shelfItem">
+						{% for livro in lista_livros %}
 						<div class="single-para ">
-						<h4>Lorem Ipsum</h4>
+						<h4>{% livro.titulo %}</h4>
 							<div class="star-on">
 								<ul class="star-footer">
 										<li><a href="#"><i> </i></a></li>
@@ -352,52 +352,5 @@ magna aliquam erat </p>
 		</div>
 
 {% endblock conteudo %}		
-<!--//content-->
-<div class="footer">
-				<div class="container">
-			<div class="footer-top-at">
-			
-				<div class="col-md-4 amet-sed">
-				<h4>MORE INFO</h4>
-				<ul class="nav-bottom">
-						<li><a href="#">How to order</a></li>
-						<li><a href="#">FAQ</a></li>
-						<li><a href="contact.html">Location</a></li>
-						<li><a href="#">Shipping</a></li>
-						<li><a href="#">Membership</a></li>	
-					</ul>	
-				</div>
-				<div class="col-md-4 amet-sed ">
-				<h4>CONTACT US</h4>
-				
-					<p>
-Contrary to popular belief</p>
-					<p>The standard chunk</p>
-					<p>office:  +12 34 995 0792</p>
-					<ul class="social">
-						<li><a href="#"><i> </i></a></li>						
-						<li><a href="#"><i class="twitter"> </i></a></li>
-						<li><a href="#"><i class="rss"> </i></a></li>
-						<li><a href="#"><i class="gmail"> </i></a></li>
-						
-					</ul>
-				</div>
-				<div class="col-md-4 amet-sed">
-					<h4>Newsletter</h4>
-					<p>Sign Up to get all news update
-and promo</p>
-					<form>
-						<input type="text" value="" onfocus="this.value='';" onblur="if (this.value == '') {this.value ='';}">
-						<input type="submit" value="Sign up">
-					</form>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
-		</div>
-		<div class="footer-class">
-		<p >© 2015 New store All Rights Reserved | Design by  <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
-		</div>
-		</div>
-</body>
-</html>
+
 			
