Finalizei a página de exibição dos detalhes dos livros

--- a/core/templates/products.html
+++ b/core/templates/products.html
@@ -57,7 +57,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</a>
 			</p>
 			<p class="centralizado pDeBaixo">
-				<a href="{% url 'livro_detalhes' %}" class="aDeBaixo">
+				<a href="{% url 'livro_detalhes' livro.id %}" class="aDeBaixo">
 					<span>Compre agora</span>
 				</a>
 			</p>
