Adicionei um l link em index

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -94,7 +94,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						{% endif %}
 
 						{% if user.is_authenticated %}
-						<li><a  href="{% url 'logout' %}">Sair</a></li>
+						<li> <a href="{% url 'perfil' %}"> Perfil</a> </li>
+						<li> <a  href="{% url 'logout' %}">Sair</a> </li>
 						{% endif %}
 					</ul>
 
